2001-10-01  Larry Ewing  <lewing@ximian.com>

	* htmltokenizer.c (add_byte): make the unknown character a ? so
	that we can distinguish it from a the underscore that camel will
	provide.

2001-09-26  Larry Ewing  <lewing@ximian.com>

	* htmlform.c (html_form_add_radio): handle a NULL name for the
	radio group without.  I'm not sure what the proper thing to do
	here is, but crashing is not a good thing.

	* htmlengine-edit-clueflowstyle.h: make the prototype match the
	function (spotted by Dan Nguyen <dnn@austin.ibm.com>).

2001-09-25  Lauris Kaplinski  <lauris@ximian.com>

	* htmlprinter.c (draw_panel): Close path before fill
	(draw_background): Ditto
	(begin): Close path before clip
	(prepare_rectangle): Close path

2001-09-21  Larry Ewing  <lewing@ximian.com>

	* htmltext.c (is_convert_nbsp_needed): silence a warning.
	(is_convert_nbsp_needed): fix this properly.

	* htmlpainter.c: add #include <stdlib.h> to cover the alloca
	prototype.

	* htmlgdkpainter.c (gtkhtml_private_split_name): ifdef out since
	it is currently unused.

	* Makefile.am (testgtkhtml_LDADD): remove -static it was breaking
	the build under libtool-1.4 and FreeBSD.
	(gtest_LDADD): same.

2001-09-19    <NotZed@Ximian.com>

	* htmltokenizer.c (add_byte): Check that utf8_length doesn't
	outgrow our buffer.  The g_utf_get_char_extended function seems
	broken in a way i can't fathom right now.

2001-09-18  Larry Ewing  <lewing@ximian.com>

	* htmlimage.c (html_image_factory_end_pixbuf): let the pointer
	close the loader when it is freed, not before then so that
	html_image_set_url works properly.

2001-09-17  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit.c (html_engine_prev_cell): don't call
	gtk_html_edit_make_cursor_visible
	(html_engine_next_cell): ditto

	* gtkhtml.c (destroy): move gconf related code before html->priv
	is freed

	* htmlclueflow.c (get_start_tag): added few \n
	(get_end_tag): ditto, use need_list_end instead of need_list_begin

2001-09-16  Radek Doulik  <rodo@ximian.com>
